--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 #For how it is generated, see `hack/generate-authors.sh`.
 
 Aisha Salihu Abdul < abdulaishasalihu@gmail.com >
+Anu Atolagbe Moses < anex4real@gmail.com >
